# trade

./: .gitignore  README.md  USAGE_GUIDE.md  backtest_analytics.py  boll_strategy.py  data_manager.py  download_data.py  dual_thrust.py  kdj_strategy.py  ma_crossover.py  macd_strategy.py  main.py  momentum_strategy.py  multi_factor.py  pair_trading.py  parameter_optimizer.py  pyproject.toml  rebalance_backtest.py  requirements-dev.txt  requirements.txt  risk_manager.py  rsi_strategy.py
data/: 000858.csv  000858_dividend.csv  002594.csv  002594_dividend.csv  159201.csv  300274.csv  300274_dividend.csv  512890.csv  600036.csv  600036_dividend.csv  600519.csv  600519_dividend.csv  600900.csv  600900_dividend.csv  601138.csv  601138_dividend.csv  601318.csv  601318_dividend.csv
tests/: test_data_manager.py  test_strategies.py
